MUDConfig now reads from the preference specified by ConfigManager.